test/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    istio-injection: enabled

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webserver
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-webserver
  template:
    metadata:
      labels:
        app: nginx-webserver
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-webserver
  namespace: test
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx-webserver
